# PIPS-IPMpp

./: .gitignore  .gitmodules  .lsan_suppression.txt.swp  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_PIPSipmpp.md  lsan_suppression.txt
PIPS-IPM/: CMakeLists.txt
PIPS-IPM/Core/: CMakeLists.txt
PIPS-IPM/Core/Abstract/: AbstractMatrix.h  Data.C  Data.h  DoubleLinearSolver.C  DoubleLinearSolver.h  DoubleMatrix.h  DoubleMatrixHandle.h  DoubleMatrixTypes.h  IotrRefCount.h  LinearAlgebraPackage.h  LinearSystem.h  Observer.C  Observer.h  OoqpMonitor.C  OoqpMonitor.h  OoqpMonitorData.h  OoqpPetscMonitor.C  OoqpPetscMonitor.h  OoqpStartStrategy.h  OoqpVersion.C  OoqpVersion.h  Options.C  Options.h  Postsolver.h  Presolver.h  Problem.C  Problem.h  ProblemFactory.h  ProblemFormulation.cpp  ProblemFormulation.h  QpGenOptions.h  Residuals.cpp  Residuals.h  Scaler.C  Scaler.h  Singleton.h  SmartPointer.h  Solver.C  Solver.h  Status.C  (+4 more)
PIPS-IPM/Core/Base/: AbstractMatrix.h  IotrRefCount.h  Observer.C  Observer.h  Postsolver.h  Presolver.h  Residuals.cpp  Scaler.C  Scaler.h  SmartPointer.h  Variables.C  Variables.h
PIPS-IPM/Core/DenseLinearAlgebra/: CMakeLists.txt  DeSymIndefSolver.C  DeSymIndefSolver.h  DeSymIndefSolver2.C  DeSymIndefSolver2.h  DeSymIndefSolverMagma.C  DeSymIndefSolverMagma.h  DeSymPSDSolver.C  DeSymPSDSolver.h  DenseGenMatrix.C  DenseGenMatrix.h  DenseLinearAlgebraPackage.C  DenseLinearAlgebraPackage.h  DenseStorage.C  DenseStorage.h  DenseSymMatrix.C  DenseSymMatrix.h
PIPS-IPM/Core/Globalization/: Filter.cpp  Filter.hpp  FilterLineSearch.cpp  FilterLineSearch.hpp  FilterStrategy.cpp  FilterStrategy.hpp
PIPS-IPM/Core/Interface/: PIPSIPMppInterface.cpp  PIPSIPMppInterface.hpp
PIPS-IPM/Core/InteriorPointMethod/: CMakeLists.txt  GondzioStochLpSolver.C  GondzioStochLpSolver.h  GondzioStochSolver.C  GondzioStochSolver.h  InteriorPointMethod.C  InteriorPointMethod.cpp  InteriorPointMethod.h  InteriorPointMethod.hpp  InteriorPointMethodType.hpp  MehrotraHeuristic.cpp  MehrotraHeuristic.hpp  MehrotraStrategy.cpp  MehrotraStrategy.hpp  MehrotraStrategyType.h  PIPSIPMppSolver.cpp  PIPSIPMppSolver.hpp  Solver.C  Solver.cpp  Solver.h  Solver.hpp  Statistics.cpp  Statistics.hpp  TerminationStatus.cpp  TerminationStatus.h
PIPS-IPM/Core/KKTFormulation/: CMakeLists.txt
PIPS-IPM/Core/LinearAlgebra/: CMakeLists.txt
PIPS-IPM/Core/LinearSolvers/: CMakeLists.txt  DoubleLinearSolver.C  DoubleLinearSolver.h
PIPS-IPM/Core/LinearSystems/: AbstractLinearSystem.h  DistributedDummyLinearSystem.h  DistributedLeafLinearSystem.C  DistributedLeafLinearSystem.h  DistributedLinearSystem.C  DistributedLinearSystem.h  DistributedRootLinearSystem.C  DistributedRootLinearSystem.h  LinearSystem.C  LinearSystem.h  RegularizationStrategy.cpp  RegularizationStrategy.h  SparseLinearSystem.C  SparseLinearSystem.h  sLinsysLeafMumps.C  sLinsysLeafMumps.h  sLinsysLeafSchurSlv.C  sLinsysLeafSchurSlv.h  sLinsysRootAug.C  sLinsysRootAug.h  sLinsysRootAugHierInner.C  sLinsysRootAugHierInner.h  sLinsysRootBordered.C  sLinsysRootBordered.h
PIPS-IPM/Core/NlpGen/: XXXNlpSolver.cpp  XXXNlpSolver.h
PIPS-IPM/Core/Options/: AbstractOptions.C  AbstractOptions.h  DistributedOptions.C  Options.C  Options.h  PIPSIPMppOptions.C  PIPSIPMppOptions.h  QpGenOptions.C
PIPS-IPM/Core/Preprocessing/: CMakeLists.txt  CurtisReidScaler.cpp  CurtisReidScaler.h  EquiStochScaler.C  EquiStochScaler.h  EquilibriumScaler.C  EquilibriumScaler.h  GeoStochScaler.C  GeoStochScaler.h  GeometricMeanScaler.C  GeometricMeanScaler.h  Postsolver.cpp  Postsolver.hpp  PreprocessFactory.h  PreprocessType.h  PresolveData.C  PresolveData.h  Presolver.cpp  Presolver.hpp  QpPresolver.C  QpPresolver.h  QpScaler.C  QpScaler.h  Scaler.cpp  Scaler.hpp  StochColumnStorage.C  StochColumnStorage.h  StochPostsolver.C  StochPostsolver.h  StochPresolver.C  StochPresolver.h  StochPresolverBase.C  StochPresolverBase.h  StochPresolverBoundStrengthening.C  StochPresolverBoundStrengthening.h  StochPresolverColumnFixation.C  StochPresolverColumnFixation.h  StochPresolverModelCleanup.C  StochPresolverModelCleanup.h  StochPresolverParallelRows.C  (+9 more)
PIPS-IPM/Core/Problems/: DistributedFactory.C  DistributedFactory.cpp  DistributedFactory.h  DistributedFactory.hpp  DistributedProblem.cpp  DistributedProblem.hpp  DistributedQP.cpp  DistributedQP.hpp  Problem.C  Problem.cpp  Problem.h  Problem.hpp  ProblemFactory.cpp  ProblemFactory.h  QP.cpp  QP.hpp  QPFactory.C  QPFactory.h  StochResourcesMonitor.C  StochResourcesMonitor.cpp
PIPS-IPM/Core/QpGen/: LinearSystem.C  LinearSystem.h  OOQPInterface.hpp  OOQPRecourseInterface.hpp  QP.cpp  QP.hpp  QPFactory.C  QPFactory.h  QpGen.C  QpGen.h  QpGenComparisonTest.C  QpGenData.C  QpGenData.h  QpGenDense.C  QpGenDense.h  QpGenDenseLinsys.C  QpGenDenseLinsys.h  QpGenDriver.h  QpGenLinsys.C  QpGenLinsys.h  QpGenOptions.C  QpGenOptions.h  QpGenResiduals.C  QpGenResiduals.h  QpGenSca.C  QpGenSca.h  QpGenScaDriver.h  QpGenScaLinsys.C  QpGenScaLinsys.h  QpGenSparseLinsys.C  QpGenSparseLinsys.h  QpGenSparseMa27.C  QpGenSparseMa27.h  QpGenSparseMa57.C  QpGenSparseMa57.h  QpGenSparseMa86.C  QpGenSparseMa86.h  QpGenSparseOblio.C  QpGenSparseOblio.h  QpGenSparseSeq.C  (+16 more)
PIPS-IPM/Core/QpPreprocess/: CMakeLists.txt  EquiStochScaler.C  EquiStochScaler.h  GeoStochScaler.C  GeoStochScaler.h  PreprocessFactory.h  PresolveData.C  PresolveData.h  QpPostsolver.C  QpPostsolver.h  QpPresolver.C  QpPresolver.h  QpScaler.C  QpScaler.h  StochColumnStorage.C  StochColumnStorage.h  StochPostsolver.C  StochPostsolver.h  StochPresolver.C  StochPresolver.h  StochPresolverBase.C  StochPresolverBase.h  StochPresolverColumnFixation.C  (+16 more)
PIPS-IPM/Drivers/: CMakeLists.txt  callbackExample.cpp  callbackTest.cpp  meanSolveAndRecourseEval.cpp  ooqpFromRaw.cpp  pips_reader.h  pipsipmBatchFromRaw.cpp  pipsipmBatchFromRaw_schur.cpp  pipsipmFromRaw.cpp  pipsipmFromRaw_comm2_schur.cpp  pipsipmFromRaw_schur.cpp  pipsipmFromRaw_schur32.cpp  pipsipmPyomo_schur.cpp  pipsipm_C_callbacks.cpp  unitCommitment.cpp
PIPS-IPM/Test/: CMakeLists.txt  TestsMain.cpp  Verbosity.hpp
(+699 files in other folders)
